--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.exp4j-0.4.5.jar=/Users/dennisschmock/Documents/exp4j-0.4.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.exp4j-0.4.5.jar}
+    ${file.reference.exp4j-0.4.5.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
